<resources>
    <string name="app_name">FiMoneyDemo</string>
    <string name="title">abda<font fgcolor='#FF0000'>.</font></string>
    <string name="no_internet">No Internet!</string>
    <string name="check_internet">Check your Internet connection and\ntry again later</string>
    <string name="search_movie_show">search movie or show</string>
    <string name="no_data">Data not found!</string>
    <string name="synopsis">Synopsis</string>
    <string name="cast_crew">Cast &amp; Crew</string>
    <string name="tab_home">Home</string>
    <string name="tab_movies">Movies</string>
    <string name="tab_series">Series</string>
    <string name="tab_episode">Episode</string>
</resources>