<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.fimoney.practical.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/gilroy_bold"
                android:text="@string/title"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewBookmark"
                android:layout_width="?actionBarSize"
                android:layout_height="?actionBarSize"
                android:layout_gravity="end"
                android:scaleType="center"
                app:srcCompat="@drawable/ic_baseline_bookmark" />
        </com.google.android.material.appbar.MaterialToolbar>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/progress"
            style="@style/FiMoneyLoaderV2"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/search_bg"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline_start"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_baseline_search"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/gilroy_bold"
                    android:gravity="center"
                    android:hint="@string/search_movie_show"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="14dp"
                    android:text="@={viewModel.queryField.flow}"
                    android:textColorHint="?android:attr/textColorSecondary"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/imageViewClear"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imageViewClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:padding="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/sl_clear_text" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="@id/guideline_end"
                app:layout_constraintStart_toStartOf="@id/guideline_start"
                app:layout_constraintTop_toBottomOf="@id/constraintSearch"
                app:tabBackground="@drawable/sl_tablayout"
                app:tabIndicatorHeight="0dp"
                app:tabMode="fixed"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/TabTextAppeareance"
                app:tabTextColor="#8D8D8D">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_home" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_movies" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_series" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_episode" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewData"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabLayout"
                tools:listitem="@layout/list_item_data" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/layoutNoInternet"
            layout="@layout/layout_no_internet"
            android:visibility="gone" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/layoutNoData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_no_data"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewNoResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/no_data"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                app:fontFamily="@font/gilroy_bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>